2008-06-15 beckerl <becker.larry@gmail.com>
      * Added "Get distance from attribute" option to Buffer.  
      Currently it disables the Union option.
      com/vividsolutions/jump/workbench/ui/plugin/analysis/BufferPlugIn.java
             
2008-06-10 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/wms/ZoomToWMSPlugIn.java:
      Fixed a null pointer when selected layer is no WMS layer.

2008-06-09 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/jump/workbench/model/WMSLayer.java:
      Added generics to layer list.

2008-05-28 mentaer <sstein@geo.unizh.ch>
      improved gui elements (i.e. enabling of drop down box only if
      checkbox for use of background layers is checked) and added I18n strings
      changed:
      org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn
      language files

2008-05-29 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/EditWMSQueryPlugIn.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/EditWMSQueryPanel.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/URLWizardPanel.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/SRSWizardPanel.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/MapLayerWizardPanel.java:
      Added capability to select image format for WMS layers/requests.

2008-05-29 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Changed naming of rules for color theming styles.

2008-05-28 mentaer <sstein@geo.unizh.ch>
      Changed Thiessen polygon creation to be aware of the extent
      of background layers. The code needs still some clean up
      (for the enabling of layer selection in the dialog) and translation.
      changed:
      org.openjump.core.graph.delauneySimplexInsert.DTriangulationForJTS
      org.openjump.core.ui.plugin.tools.CreateThiessenPolygonsPlugIn
